add a couple of unit tests remove unused query params
